--- a/test_task/css/library.css
+++ b/test_task/css/library.css
@@ -7,6 +7,11 @@ body {
   font-style: normal;
 }
 
+.container{
+  max-width: 1110px;
+  margin: 0 auto;
+}
+
 .button {
   display: flex;
   border-radius: 6px;
